--- a/requirements.txt
+++ b/requirements.txt
@@ -6,4 +6,6 @@ textblob
 wordcloud
 matplotlib
 requests
-kaggle
+plotly
+spacy>=3.7.0
+https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.7.1/en_core_web_sm-3.7.1.tar.gz
