--- a/requirements.txt
+++ b/requirements.txt
@@ -6,5 +6,5 @@ wordcloud
 matplotlib
 requests
 plotly
-spacy>=3.7.0
-#
+spacy
+https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.7.1/en_core_web_sm-3.7.1-py3-none-any.whl
