--- a/requirements.txt
+++ b/requirements.txt
@@ -15,3 +15,6 @@ blis==0.7.11
 thinc==8.2.3
 numpy==1.26.4
 https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.7.1/en_core_web_sm-3.7.1-py3-none-any.whl
+
+# --- Add the official Kaggle library ---
+kaggle==1.6.14
