--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,3 @@
-# requirements.txt
-
 streamlit==1.36.0
 pandas==2.2.2
 altair==5.3.0
@@ -9,7 +7,7 @@ matplotlib==3.9.0
 requests==2.32.3
 plotly==5.22.0
 
-# --- Stable Spacy Ecosystem Versions ---
+# Stable Spacy Ecosystem Versions
 spacy==3.7.4
 blis==0.7.11
 thinc==8.2.3
