--- a/requirements.txt
+++ b/requirements.txt
@@ -6,7 +6,7 @@ wordcloud==1.9.3
 matplotlib==3.9.0
 requests==2.32.3
 plotly==5.22.0
-
+streamlit-plotly-events==
 # Stable Spacy Ecosystem Versions
 spacy==3.7.4
 blis==0.7.11
