--- a/requirements.txt
+++ b/requirements.txt
@@ -14,5 +14,5 @@ thinc==8.2.3
 numpy==1.26.4
 https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.7.1/en_core_web_sm-3.7.1-py3-none-any.whl
 
-# --- Add the official Kaggle library ---
+streamlit-aggrid==1.1.6
 kaggle==1.7.4.5
