--- a/requirements.txt
+++ b/requirements.txt
@@ -13,6 +13,6 @@ blis==0.7.11
 thinc==8.2.3
 numpy==1.26.4
 https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.7.1/en_core_web_sm-3.7.1-py3-none-any.whl
-
+pygwalker==0.4.9.15
 streamlit-aggrid==1.1.6
 kaggle==1.7.4.5
