--- a/requirements.txt
+++ b/requirements.txt
@@ -16,3 +16,4 @@ https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.7.1
 pygwalker==0.4.9.15
 streamlit-aggrid==1.1.6
 kaggle==1.7.4.5
+scikit-learn==1.5.0
